# IFT6285-NLP-Project2

./: .gitignore  1bwc-preprocess.sh  LSTM.ipynb  README.md  data_analysis.py  draft.py  environment.yml  ibis.py  kenlm_baseline.py  pre-process.py  project2.py  reorder.py  requirements.txt  seq2seq_translation_tutorial.ipynb  show_results.py  test_transformers.py  training-data-preprocess.py  transformers_utils.py
ZGen-0.2.0/ZGen-0.2.0/: .gitignore  CMakeLists.txt
ZGen-0.2.0/ZGen-0.2.0/src/shiftreduce/: option.h
ZGen-0.2.0/ZGen-0.2.0/src/shiftreduce/decode/: decoder.cc  decoder.h  full_decoder.cc  full_decoder.h  none_decoder.cc  none_decoder.h  partial_decoder.cc  partial_decoder.h
ZGen-0.2.0/ZGen-0.2.0/src/shiftreduce/frontend/: main.cc  opt.cc
ZGen-0.2.0/ZGen-0.2.0/src/shiftreduce/learning/: learner.cc  learner.h
ZGen-0.2.0/ZGen-0.2.0/src/shiftreduce/model/: model.cc  model.h  score_context.h
ZGen-0.2.0/ZGen-0.2.0/src/shiftreduce/pipe/: pipe.cc  pipe.h
ZGen-0.2.0/ZGen-0.2.0/src/shiftreduce/types/: internal_types.h  state.cc  state.h
ZGen-0.2.0/ZGen-0.2.0/src/utils/serialization/: unordered_map.h
dev data/: euro.ref  euro.test  hans.ref  hans.test  news.ref  news.test
notebooks/: LSTM.ipynb  deep-sort-words.ipynb  deep-sort.ipynb
notebooks/outputs/: model.csv
plots/: length_distribution_dev.eps  length_distribution_dev_euro.eps  length_distribution_dev_hans.eps  length_distribution_dev_news.eps  length_distribution_train.eps  times - Copy (3).eps  times.eps  times4 (1).eps
results/: full.json  query_time.json  results.json  results2.json  results_final.json  tmp.json
